2010-11-13  Jari Aalto  <jari.aalto@cante.net>

	* doc/sed.x: Order commands alphabetically.

2010-11-10  Paolo Bonzini  <bonzini@gnu.org>

	* doc/sed-in.texi: Fix double negation in comment, escape
	file names.

2010-11-03  Eric Blake  <eblake@redhat.com>

	* basicdefs.h (ISDIGIT): Avoid compiler warning on cygwin.
	* sed/compile.c (normalize_text): Avoid undefined behavior.

	* sed/sed.c (includes): Supply missing header.

2010-11-01  Paolo Bonzini  <bonzini@gnu.org>

	* autoboot.conf: Replace gettext with gettext-h.  Suggested by
	Gerald Pfeifer and Eric Blake.
	* configure.ac: Downgrade minimum requested version of gettext
	to 0.17.

2010-10-31  Gerald Pfeifer  <gerald@pfeifer.com>

	* doc/sed-in.texi (Extended regexps): Add '|' to the list of
	differences.  Note that "\|" is a GNU extension to begin with.
	* doc/sed.texi: Rebuild.

2010-10-20  Paolo Bonzini  <bonzini@gnu.org>

	* autoboot.conf: Add fwriting.
	* sed/utils.c: Use it.

2010-09-20  Paolo Bonzini  <bonzini@gnu.org>

	* doc/configure.ac: Mention bug-sed@gnu.org.
	* doc/sed.x: Mention bug-sed@gnu.org.
	* doc/sed-in.texi: Mention bug-sed@gnu.org.

2010-08-30  Paolo Bonzini  <bonzini@gnu.org>

	* Makefile.am (dist-hook): Remove COPYRIGHT_YEAR check.
	* autoboot.conf (gnulib_modules): Add version-etc-fsf.
	* configure.ac (COPYRIGHT_YEAR): Remove.  Change package name to
	"GNU sed".
	* doc/sed.1: Regenerate.
	* sed/sed.c (AUTHORS): New.
	(main): Use version_etc.

2010-07-18  Paolo Bonzini  <bonzini@gnu.org>

	* sed.c (write_mode): New.
	(main): Initialize it to "wb" if --binary is passed.
	* sed.h (write_mode): New.
	* compile.c (mark_subst_opts, compile_program): Use it instead
	of "w".
	* execute.c (open_next_file): Pass write_mode to ck_mkstemp.
	* utils.c (ck_mkstemp): Accept mode, pass it to fdopen.  Constify.
	* utils.h (ck_mkstemp): Adjust prototype.

2010-08-17  Paolo Bonzini  <bonzini@gnu.org>

	Fix imprecision in the documentation of `D'.